added measurement view activity
not yet tested

--- a/Connected_Health_App/app/src/main/res/values/strings.xml
+++ b/Connected_Health_App/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Connected_Health_App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_measurement_view">Measurement View</string>
 
 </resources>
