--- a/Connected_Health_App/app/src/main/res/values/strings.xml
+++ b/Connected_Health_App/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_measurement_view">Measurement View</string>
+    <string name="title_activity_information_view">Information View</string>
+    <string name="title_activity_questionnaire_view">Questionnaire View</string>
+    <string name="title_activity_profile_view">Profile View</string>
 
 </resources>
