--- a/Connected_Health_App/app/src/main/res/values/strings.xml
+++ b/Connected_Health_App/app/src/main/res/values/strings.xml
@@ -9,8 +9,16 @@
     <string name="title_activity_questionnaire_view">Questionnaire View</string>
     <string name="title_activity_profile_view">Profile View</string>
 
-    <!--Info Panel Related-->
+    <!-- Info Panel Related -->
     <string name="info_title">Information</string>
-    <string name="info_link"> <a href="https://www.mindainc.com.au/">Minda Website</a> </string>
+    <string name="info_link"><a href="https://www.mindainc.com.au/">Minda Website</a></string>
+
+    <!-- Profile Panel Related -->
+=    <string name="profile_first_name">John</string>
+    <string name="profile_last_name">Smith</string>
+    <string name="profile_address">123 Example St Fakeville</string>
+    <string name="profile_number">63428756</string>
+    <string name="profile_email">johnsmith@adelaide.com</string>
+    <string name="title_activity_profile_edit">ProfileEditActivity</string>
 
 </resources>
