--- a/Connected_Health_App/app/src/main/res/values/strings.xml
+++ b/Connected_Health_App/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="info_link"><a href="https://www.mindainc.com.au/">Minda Website</a></string>
 
     <!-- Profile Panel Related -->
-=                        <string name="profile_first_name">John</string>
+=                            <string name="profile_first_name">John</string>
     <string name="profile_last_name">Smith</string>
     <string name="profile_address">123 Example St Fakeville</string>
     <string name="profile_number">63428756</string>
@@ -25,5 +25,6 @@
     <string name="title_activity_journal_view">JournalViewActivity</string>
     <string name="title_activity_medical_notes_view">MedicalNotesViewActivity</string>
     <string name="title_activity_medical_note_single_view">MedicalNoteSingleViewActivity</string>
+    <string name="title_activity_single_item_view">SingleItemViewActivity</string>
 
 </resources>
