--- a/Connected_Health_App/app/src/main/res/values/strings.xml
+++ b/Connected_Health_App/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="title_activity_measurement_steps_view">MeasurementStepsViewActivity</string>
     <string name="title_activity_single_item_edit">SingleItemEditActivity</string>
     <string name="title_activity_single_item_delete">SingleItemDeleteActivity</string>
+    <string name="title_activity_questionnaire_complete_view">QuestionnaireCompleteViewActivity</string>
 
 </resources>
